Add MC user data
